# ProtorealZeta

./: .gitignore  AgenticMechanics.lean  BIBLIOGRAPHY.md  GEMINI.md  LICENSE  LICENSE-APACHE  LaRueProtorealAlgebra.lean  README.md  lakefile.toml  scratch_hypervolume.lean  skill.md  training_tips.md
AgenticMechanics/: Basic.lean  Electrodynamics.lean  Newton.lean  PhysicsRegime.lean  Relativity.lean
LaRueProtorealAlgebra/: ATProtoIsomorphism.lean  AdelicStructure.lean  AgenticKeychain.lean  AgenticRank.lean  AgingEvolution.lean  AntiSpoofing.lean  Apoptosis.lean  AstromaticsTopology.lean  AuraGitIsomorphism.lean  Awareness.lean  Basic.lean  BitCollapse.lean  BitShift.lean  BohmOrder.lean  BorrowObserver.lean  C46Unification.lean  CellSplitting.lean  CodeSwitching.lean  CollatzResonance.lean  CommutatorGap.lean  ComputationalCharge.lean  ConfigSheaf.lean  ConnesWienerAlgebra.lean  ConsciousConservation.lean  ConsciousWakefulness.lean  CradleContinuation.lean  CyberBundle.lean  CyberdeckPlasmaBridge.lean  CyberneticActionReaction.lean  CyberneticChemistry.lean  CyberneticElectromagnetism.lean  CyberneticLife.lean  (+133 more)
NeuroPharm/: .gitignore  Cargo.toml  README.md  dashboard.py  goait_cli.py  protoreal_gan_demo.py  run_dashboard.sh  run_goait.sh  spectral_audit_bench.py  timesfm_dilation_demo.py  zetaspace_demo.py
NeuroPharm/goait/: __init__.py  agent.py  dud.py  feature_engineer.py  goait_node.py  protoreal_gan.py  timedilation.py  train_local.py  zetaspace.py
NeuroPharm/goait/layers/: dilation.py
NeuroPharm/src/: agent.rs  antenna.rs  lib.rs  protoreal.rs  zeta.rs
(+134 files in other folders)
