[package]
name = "neuro_pharm"
version = "0.1.0"
edition = "2021"
authors = ["La Rue", "Antigravity"]
description = "High-performance Protoreal Agentic API for 𝕌-Manifold Research."

[lib]
name = "neuro_pharm"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = "0.4"
